--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/assets/img/crud-bg.jpg);
+    background-image: url(../assets/img/crud-bg.jpg);
     background-size:cover;
     background-repeat: no-repeat;
     background-position:center;
@@ -11,3 +11,20 @@ body{
     align-items: center;
     
 }
+.modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.6rem 3rem;
+    border: 3px solid black;
+    border-radius: 5px;
+    background: white;
+    height: 700px;
+    width: 500px;
+    box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+  }
