--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../assets/img/crud-bg.jpg);
+    background-image: url(../img/crud-bg.jpg);
     background-size:cover;
     background-repeat: no-repeat;
     background-position:center;
@@ -24,7 +24,7 @@ body{
     border: 3px solid black;
     border-radius: 5px;
     background: white;
-    height: 700px;
+    height: 600px;
     width: 500px;
     box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
   }
