--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,8 @@ body{
     width: 500px;
     box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
   }
+
+  .form-btn{
+    margin: 10px;
+    border: 2px solid blue;
+  }
