--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,10 +38,11 @@ body{
     color: red;
   }
   .tdimg{
-    background-size: 30%;
+    background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius: 50%
+    border-radius: 50%;
+    justify-content:start;
   }
 
   ion-icon {
@@ -51,20 +52,51 @@ body{
   }
 
   td{
-    color: floralwhite;
-    border: 2px beige;
-    font-size: large;
-    font-weight: 40px;
+    color: rgb(247, 0, 0);
+    border: 2px rgb(105, 105, 33);
+    font-size: 25px;
+    font-weight: 300px;
+    font-style: normal;
+    font-family: tdfont;
   }
 .container-fluid >a{
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:pageFont;
   color: aqua;
   font-style: italic;
-  font-size: 30px;
+  font-size: 40px;
   margin-left: 20px;
 }
 th{
-  font-size: 20px;
+  font-size: 30px;
   background-color: aquamarine;
-  color: chocolate;
+  color: rgb(195, 230, 3);
+}
+
+.table{
+  border: 3px solid rgb(233, 233, 7);
+  table-layout: fixed;
+  font-family: pageFont;
+}
+
+@font-face {
+  font-family: pageFont;
+  src: url(../css/CabinSketch-Bold.ttf);
+}
+
+@font-face {
+  font-family: tdfont;
+  src: url(../css/Aclonica-Regular.ttf);
+}
+
+.modal h1{
+  font-family: tdfont;
+  text-align: center;
+  font-size: 35px;
+  color: gold;
+}
+
+.modal h3{
+  font-family: tdfont;
+  font-size: 35px;
+  color: gold;
 }
