--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     background-image: url(../img/crud-bg.jpg);
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position:center;
 }
@@ -21,9 +21,7 @@ body{
     flex-direction: column;
     align-items: center;
     padding: 1.6rem 3rem;
-    border: 3px solid black;
-    border-radius: 5px;
-    background: white;
+    background: #3a606a;
     height: 600px;
     width: 500px;
     box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
@@ -54,7 +52,7 @@ body{
   td{
     color: rgb(255, 255, 255);
     border: 2px rgb(105, 105, 33);
-    font-size: 25px;
+    font-size: 15px;
     font-weight: 300px;
     font-style: normal;
     font-family: tdfont;
@@ -69,13 +67,14 @@ body{
 th{
   font-size: 30px;
   background-color: aquamarine;
-  color: rgb(195, 230, 3);
+  color: rgb(201, 201, 206);
+  font-size: medium;
 }
 
 .table{
-  border: 3px solid rgb(233, 233, 7);
+  border: 3px solid rgb(7, 41, 233);
   table-layout: fixed;
-  font-family: pageFont;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 @font-face {
@@ -91,12 +90,26 @@ th{
 .modal h1{
   font-family: tdfont;
   text-align: center;
-  font-size: 35px;
-  color: gold;
+  font-size: 30px !important;
+  color: rgb(0, 0, 2);
+  background-color: #3c99dc;
 }
 
 .modal h3{
   font-family: tdfont;
-  font-size: 35px;
-  color: gold;
+  font-size: 25px !important;
+  color: rgb(229, 233, 0);
+  font-weight: 600;
+}
+.modal-header{
+  background-color: #3c99dc;
+  font-family: tdfont;
+  border-top-left-radius:0px !important;
+  border-top-right-radius:0px !important;
+}
+.modal-body{
+  background-color: #66d3fa;
+}
+.modal-footer{
+  background-color: #2565ae;
 }
